--- a/src/styles/tufte.css
+++ b/src/styles/tufte.css
@@ -214,6 +214,8 @@ figure {
   max-width: 55%;
   -webkit-margin-start: 0;
   -webkit-margin-end: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
   margin: 0 0 3em 0;
 }
 
